fixed alignment issues on top section

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -166,6 +166,10 @@
   border-radius: 2px;
 }
 
+.top-row {
+  display: flex;
+}
+
 .product-text {
   text-align: center;
 }
@@ -179,6 +183,7 @@
   padding: 30px;
   text-align: left;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
+  margin-right: 15px;
 }
 
 .product-description h2 {
@@ -203,10 +208,9 @@
 }
 
 .edit-product-image {
-  /*padding: 5px;*/
   height: 350px;
   display: flex;
-  justify-content: center;
+  margin-bottom:10px;
 }
 
 .edit-product-image img {
